--- a/TVApp/TVApp/Base.lproj/Main.storyboard
+++ b/TVApp/TVApp/Base.lproj/Main.storyboard
@@ -15,8 +15,20 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="6LU-Gc-KUh">
+                                <rect key="frame" x="20" y="88" width="374" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6LU-Gc-KUh" secondAttribute="trailing" constant="20" id="8L1-8x-rBK"/>
+                            <constraint firstItem="6LU-Gc-KUh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="cTF-7G-kAq"/>
+                            <constraint firstItem="6LU-Gc-KUh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fK3-SJ-ZlP"/>
+                            <constraint firstItem="6LU-Gc-KUh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wQJ-D6-Ljo"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="kakaoTV" id="RG6-MI-3cz"/>
                 </viewController>
