--- a/TVApp/TVApp/Base.lproj/Main.storyboard
+++ b/TVApp/TVApp/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,12 +22,34 @@
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="EBE-yd-ZbU">
-                                <rect key="frame" x="80" y="156" width="254" height="32"/>
+                                <rect key="frame" x="80" y="152" width="254" height="32"/>
                                 <segments>
                                     <segment title="오리지날"/>
                                     <segment title="라이브"/>
                                 </segments>
                             </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="OZo-CX-j2n">
+                                <rect key="frame" x="20" y="191" width="374" height="671"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NEU-Mp-fQQ">
+                                    <size key="itemSize" width="374" height="220"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionViewCell" id="OLx-ZI-c8l" customClass="CollectionViewCell" customModule="TVApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="220"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="evY-42-zee">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="220"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <size key="customSize" width="374" height="220"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -34,13 +57,20 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6LU-Gc-KUh" secondAttribute="trailing" constant="20" id="8L1-8x-rBK"/>
                             <constraint firstItem="6LU-Gc-KUh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="B7y-p6-wX9"/>
                             <constraint firstItem="EBE-yd-ZbU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="80" id="LEo-bu-76p"/>
+                            <constraint firstItem="OZo-CX-j2n" firstAttribute="top" secondItem="EBE-yd-ZbU" secondAttribute="bottom" constant="8" id="MjR-zl-Jdn"/>
+                            <constraint firstItem="OZo-CX-j2n" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="OCU-4c-LZt"/>
+                            <constraint firstItem="OZo-CX-j2n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="aXS-3v-ht4"/>
                             <constraint firstItem="6LU-Gc-KUh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="cTF-7G-kAq"/>
                             <constraint firstItem="6LU-Gc-KUh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fK3-SJ-ZlP"/>
-                            <constraint firstItem="EBE-yd-ZbU" firstAttribute="top" secondItem="6LU-Gc-KUh" secondAttribute="bottom" constant="12" id="h7e-9g-ule"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OZo-CX-j2n" secondAttribute="trailing" constant="20" id="gBb-Nt-qsM"/>
+                            <constraint firstItem="EBE-yd-ZbU" firstAttribute="top" secondItem="6LU-Gc-KUh" secondAttribute="bottom" constant="8" id="h7e-9g-ule"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EBE-yd-ZbU" secondAttribute="trailing" constant="80" id="zzN-Fh-Sy1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="kakaoTV" id="RG6-MI-3cz"/>
+                    <connections>
+                        <outlet property="collectionView" destination="OZo-CX-j2n" id="q71-Or-w7L"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
